# billshield-monorepo

./: .gitignore  README.md  docker-compose.yml
billshield-backend/: .env.example  .env.prod  .gitignore  Dockerfile  alembic.ini  pyproject.toml
billshield-backend/alembic/: env.py
billshield-backend/src/app/: main.py
billshield-backend/src/app/core/: config.py  constants.py  errors.py  logging.py  security.py
billshield-backend/src/app/data/: mock_seed.py  plan_templates.py  support_services.py  tariff_benchmarks.py
billshield-backend/src/app/db/: base.py  init_db.py  session.py
billshield-backend/src/app/engines/: appliance_time_shifting.py  broadband_social_tariff.py  council_tax_checker.py  debt_arrears_triage.py  direct_debit_health.py  eligibility_scanner.py  food_support.py  heating_optimisation.py  meter_reading_reminder.py  ranking_engine.py  standing_charge_awareness.py  tariff_checker.py  water_bill_optimiser.py
billshield-backend/src/app/models/: bill.py  household.py  plan.py  recommendation.py  support_service.py
billshield-backend/src/app/providers/: carbon_window_provider.py  council_lookup_provider.py  mock_carbon_window_provider.py  mock_council_lookup_provider.py  mock_ocr_provider.py  mock_plan_generator_provider.py  mock_support_locator_provider.py  mock_tariff_benchmark_provider.py  ocr_provider.py  (+3 more)
billshield-backend/tests/: conftest.py  test_bills.py  test_dashboard.py  test_health.py  test_households.py  test_plans.py  test_recommendation_ranking.py  test_safety_guardrails.py  test_scenarios.py  test_support_services.py
(+39 files in other folders)
