[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "billshield-backend"
version = "0.1.0"
description = "BillShield UK — backend API for household bill support"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "BillShield UK Team"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.18",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
    "aiofiles>=24.1.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "faker>=33.0.0",
    "pytest-cov>=6.0.0",
]

[project.urls]
Repository = "https://github.com/billshield-uk/backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
